# order_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  HELP.md  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 86bba2a6ce20_initial_migration_users_and_orders_.py
src/: main.py
src/application/services/: auth_service.py
src/core/: config.py  logging.py  security.py  utils.py
src/domain/entities/: __init__.py
src/domain/events/: __init__.py
src/domain/repositories/: __init__.py
src/domain/value_objects/: __init__.py
src/infrastructure/cache/: __init__.py  redis_client.py
src/infrastructure/database/: __init__.py  models.py  uow.py
src/infrastructure/database/models/: __init__.py  order.py  user.py
src/infrastructure/message_broker/: __init__.py  publisher.py
src/infrastructure/repositories/: __init__.py  order_repository.py  user_repository.py
src/infrastructure/taskiq/: broker.py  tasks.py
src/presentation/api/: deps.py
src/presentation/schemas/: __init__.py  auth.py  order.py
src/tests/unit/domain/: test_entities.py
