[project]
name = "order-service"
version = "0.1.0"
description = "Order Management Service with Clean Architecture"
readme = "README.md"
requires-python = "==3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
]

# === Настройки форматирования кода с помощью Black ===
[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
skip-magic-trailing-comma = false
preview = false

# === Настройки сортировки импортов с помощью isort ===
[tool.isort]
profile = "black"
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
line_length = 100
multi_line_output = 3

# === Настройки линтера и форматтера Ruff (альтернатива black) ===
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E203", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
]
lines-after-imports = 2
