[project]
name = "order-service"
version = "0.1.0"
description = "Order Management Service with Clean Architecture"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.129.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]

# === Настройки линтера и форматтера Ruff (альтернатива black) ===
[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E203", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
]
lines-after-imports = 2
